test/class/valid/catchesNullObject.wacc
begin
  class n is
    bool b;

    init() is skip; b = true end

  end

  n n = null;
  n.b = false
end
